Added ability to add comments to blog. Also added route entries for blog

--- a/peephole/app/views/posts/_form.html.erb
+++ b/peephole/app/views/posts/_form.html.erb
@@ -13,6 +13,7 @@
   <% end %>
 
   <div class="field">
+  <%= f.hidden_field :post_type %>
   <%= f.label :title, 'Title' %>
   <%= f.text_field :title, :size => "75" %> 
   </div>
