--- a/peephole/app/views/posts/index.html.erb
+++ b/peephole/app/views/posts/index.html.erb
@@ -1,17 +1,7 @@
 <% @posts.each do |post| %>
-
-  <h4> <%= post.title %></h4>
-
-  <h6> <%= post.user.full_name %> | <%= post.get_formatted_post_time %></h6>
-
-  <div class="contents">
-<%= raw post.content %>
-  </div> 
-
-  <div> <%= link_to 'Edit', edit_post_path(post) if post.can_edit? session[:user] %>
-
-  <br /> <br /> 
-
+  <% @post = post %>
+  <%= render 'postview' %>
+  <%= link_to 'View', post_path(@post) %> | <%= @post.responses.count %> comments
 <% end %>
 <script type="text/javascript">
     $(document).ready(function() {
