--- a/peephole/app/views/layouts/application.html.erb
+++ b/peephole/app/views/layouts/application.html.erb
@@ -4,9 +4,10 @@
   <title>Peephole</title>
   <link rel="stylesheet" type="text/css" href="/stylesheets/wmd.css">
   <%= stylesheet_link_tag :all %>
-  <%= javascript_include_tag :defaults %>
+  <%= javascript_include_tag "jquery-1.4.4.min" %>
+  <%= javascript_include_tag "jquery-ui-1.8.7.min.js" %>
+  <%= javascript_include_tag "rails" %>
   <%= csrf_meta_tag %>
-  <script type="text/javascript" src="/javascripts/jquery/jquery-1.2.6.js"></script>
   <script type="text/javascript" src="/javascripts/wmd/showdown.js"></script>
 </head>
 <body>
