--- a/peephole/app/views/layouts/application.html.erb
+++ b/peephole/app/views/layouts/application.html.erb
@@ -1,18 +1,34 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Peephole</title>
+  <title>Peephole -  <%= yield :title %></title>
   <link rel="stylesheet" type="text/css" href="/stylesheets/wmd.css">
-  <%= stylesheet_link_tag :all %>
+  <%= stylesheet_link_tag "wmd.css"  %>
+  <%= yield(:stylesheet)  %>
   <%= javascript_include_tag "jquery-1.4.4.min" %>
   <%= javascript_include_tag "jquery-ui-1.8.7.min.js" %>
   <%= javascript_include_tag "rails" %>
+  <%= javascript_include_tag "wmd/showdown.js" %>
   <%= csrf_meta_tag %>
-  <script type="text/javascript" src="/javascripts/wmd/showdown.js"></script>
-</head>
-<body>
-
-<%= yield %>
-
-</body>
+  <style>
+	a { text-decoration : none; }
+	a.big
+	{
+		font-size:25px;
+	}
+    </style>
+  </head>
+  <body style="font-family:verdana">
+	 <div style="float:left"><img src="/images/ladybug.png" /></div>
+	 <div style="float:left"></div>
+	 	<h1><%= Product_Name %></h1>
+		<p style="font-size:12px">All the inside scoop, fresh and uncut</p>
+	 <div style="float:left;vertical-align:bottom;font-family:verdana;font-size:20px;">
+		<a class="big" href="/blog">blog</a>&nbsp;&nbsp;&nbsp;&nbsp;
+		<a class="big" href="/forum">forum</a>
+	 </div>
+        <div style="clear:both">
+        <%= yield %>
+        </div>
+  </body>
 </html>
